# rs-directorycompare

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: CreateOSXRelease.yml  rust.yml
src/: main.rs  utilities.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: page.tsx
