[package]
name = "DirectoryCompare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
eframe = "0.25.0"
rfd = "0.13.0"