[package]
name = "DirectoryCompare"
description = "A program for rectifying differences between directories."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
eframe = "0.26.0"
egui_extras = "0.26.0"
rfd = "0.13.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[package.metadata.bundle]
name = "Directory Compare"
identifier = "io.github.Darthnerda.rs-directorycompare"
icon = ["images/32x32.png", "images/128x128.png", "images/1024x1024@2x.png"]
category = "public.app-category.utilities"
short_description = "A directory comparing program."
long_description = "A program that lets you see what files are missing between two directories irrespective of how they are nested."